--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -402,6 +402,8 @@ errors:
       already_exists: This username is already taken
     email:
       already_exists: This email address is already taken
+    disk_quota:
+      invalid_disk_quota: Invalid disk quota
 
 theme:
   system: System
