--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -147,7 +147,7 @@ pages:
         email: E-mail address
         role: Role
         quota: Disk space quota
-        quota_help: Sorting is done on the used disk space.
+        quota_help: Sorting is done based on the used disk space.
         status: Status
         creation_date: Creation date
       context_menu:
