--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -36,6 +36,7 @@ pages:
       expired: Votre session a expiré, veuillez vous reconnecter
       logout_all: Vous avez été déconnecté de tous les appareils
       disabled: Votre compte a été désactivé
+      password_changed: Votre mot de passe a été modifié, veuillez vous reconnecter
   change_password:
     title: Modifier le mot de passe
     message: Vous devez modifier votre mot de passe pour continuer
