--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -64,7 +64,8 @@ pages:
     context_menu:
       open: Open
       rename: Rename
-      custom_link: Set a custom link
+      set_custom_link: Set a custom link
+      edit_custom_link: Edit custom link
       change_visibility: Change visibility
       copy_link: Copy link
       download: Download
@@ -89,7 +90,8 @@ pages:
       cancel: Cancel
       submit: Rename
     edit_custom_link:
-      title: Set a custom link
+      title_set: Set a custom link
+      title_edit: Edit custom link
       old_link_summary: 'Your file will still be accessible via the original link: {link}'
       links_summary: A custom link is prefixed by the {c_route} route, unlike an original link which is prefixed by the {i_route} route.
     change_visibility:
