--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -176,7 +176,7 @@ pages:
         submit: Create
       edit_dialog:
         title: Edit a user
-        password_summary: For security reasons, a user's password can only be changed by themselves.
+        password_summary: For security reasons, a user’s password can only be changed by themselves.
         cancel: Cancel
         submit: Save
       activate_dialog:
@@ -191,7 +191,7 @@ pages:
         submit: Deactivate the user
       delete_dialog:
         title: Delete a user
-        summary: This action is irreversible and all the user's files will be permanently deleted. Are you sure you want to delete this user?
+        summary: This action is irreversible and all the user’s files will be permanently deleted. Are you sure you want to delete this user?
         cancel: Cancel
         submit: Delete
   debug:
