--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -221,6 +221,10 @@ pages:
         title: Vous n’avez pas encore créé de jeton
         description: Créez un jeton pour pouvoir envoyer des fichiers depuis une application tierce.
         create_token: Créer un jeton
+      error:
+        title: Quelque chose s’est mal passé
+        description: Impossible de charger la liste des jetons
+        retry_button: Réessayer
       create_dialog:
         title: Créer un jeton
         summary: Un jeton personnel vous permet d’autoriser une application tierce à envoyer des fichiers avec votre identité. Les jetons sont strictement personnels et ne doivent pas être partagés. Si vous pensez qu’un jeton est compromis, il est vivement conseillé de le supprimer.
